--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div id="type_div">
                 <h1>Hi, I'm <span class="typing">Farheen</span><br> From India</h1>
             </div>
-                <a href="images1/Farheen-Resume.pdf" class="btn" download >Resume</a>
+                <a href="images1/Farheen-Resume.pdf" class="btn" download >My Resume</a>
             </div>
             
             </div>
