--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images1/balavita.PNG">
+                    <img src="images1/balavita.png">
                     <div class="layer">
                         <h3>Balavita-Clone</h3>
                         <p> Tech Stack- HTML , CSS , JAVASCRIPT<br> Shop whatever you want</p>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images1/Project_2.PNG">
+                    <img src="images1/Project_2.png">
                     <div class="layer">
                         <h3>SkinStore-Clone</h3>
                         <p> Tech Stack- HTML , CSS , JAVASCRIPT,API<br> Shoping of Sking Related Products</p>
