--- a/index1.html
+++ b/index1.html
@@ -24,7 +24,7 @@
                     <li><a href="#github">Github</a></li>
                     <li><a href="#portfolio">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a id="res1" href="images1/Farheen-Resume.pdf" download>Resume <i class="fa-solid fa-download"></i></a></li>
+                    <li><a id="res1" href="images/Farheen-Resume.pdf" download>Resume <i class="fa-solid fa-download"></i></a></li>
                     <i class="fas fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fas fa-bars" onclick="openmenu()"></i>
@@ -35,7 +35,7 @@
                 <div id="type_div">
                 <h1>Hi, I'm <span class="typing">Farheen</span><br> From India</h1>
             </div>
-                <a id="res2" href="images1/Farheen-Resume.pdf" class="btn" download >Resume</a>
+                <a id="res2" href="images/Farheen-Resume.pdf" class="btn" download >Resume</a>
             </div>
             
             </div>
