chaking done also with IA

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/newestimage.PNG" >
+                    <img src="images/newestimage.png" >
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/Project_2.PNG">
+                    <img src="images/Project_2.png">
                     <div class="layer">
                         <h2>SkinStore-Clone</h2>
                         <p>Ecommerce website for online shopping with Full functionality flow i.e SignUp, SighIn, Cart, Payment Checkout</p>
