--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/balavita.PNG">
+                    <img src="images/balavita.png">
                     <div class="layer">
                         <h2>Balavita-Clone</h2>
                         <p>Ecommerce website for online shopping with Full functionality flow i.e SignUp, SighIn, Cart, Payment Checkout</p>
