--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
 
                         <p>It is a console-based application.
                              This software provides a facility for reporting online crimes, 
-                             complaints.
-                            </p>
+                             complaints, and missing persons, showing the most wanted person 
+                             details Any Number of clients can connect to the server. 
+                             Each user first makes their login to sever to show their 
+                             availability. I use jar files to enable the JDBC facilities. </p>
 
                         <p> Tech Stack | java | JDBC | MySQL |</p>
                         <div>
