--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Aspiring Full Stack Web Developer who is analytical and meticulous.
+                    <p>Full Stack Web Developer who is analytical and meticulous.
                         More than 1000 hours of deliberate practice,More than 150 DSA questions practice,
                          Contributed to multiple groups and solo projects and can write clean and optimized
                           code and able to create full-stack online apps utilizing Java, Spring Boot, 
@@ -161,7 +161,7 @@
                 <div class="work">
                     <img src="images/balavita.png">
                     <div class="layer">
-                        <h2>Balavita-Clone</h2>
+                        <h2>Bellavita-Clone</h2>
                         <p>Ecommerce website for online shopping with Full functionality flow i.e SignUp, SighIn, Cart, Payment Checkout</p>
                         <p> Tech Stack | HTML | CSS | JavaScript</p>
                         <div>
