--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#Skills">Skills</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <li><a href="#github">Github</a></li>
                     <li><a href="#portfolio">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
@@ -99,8 +99,8 @@
                 </div>
             </div>
         </div>
-    </div>
-      <div id="Skills" class="container">
+    </section>
+      <div id="skills" class="container">
         <h1 class="sub-title">Technical Skills</h1>
         <div id="skill_container" >
             
@@ -128,14 +128,12 @@
                         <p>It is a console-based application.
                              This software provides a facility for reporting online crimes, 
                              complaints, and missing persons, showing the most wanted person 
-                             details Any Number of clients can connect to the server. 
-                             Each user first makes their login to sever to show their 
-                             availability. I use jar files to enable the JDBC facilities. </p>
+                             details Any Number of clients can connect to the server. </p>
 
                         <p> Tech Stack | java | JDBC | MySQL |</p>
                         <div>
                         <a href="https://github.com/Farheen-cell/ultra-magic-8688" target="_blank">Github</a>
-                        <a href="https://github.com/Farheen-cell/ultra-magic-8688" target="_blank">Live</a>
+                        
                     </div>
                     </div>
                 </div>
@@ -148,7 +146,7 @@
 
                         <p>A news website where you can watch and read live news and about world affairs.Provides you news from all over the world.</p>
 
-                        <p> Tech Stack | HTML | CSS | JavaScript | News Api | YouTube Api</p>
+                        <p> Tech Stack | HTML | CSS | JavaScript</p>
                         <div>
                         <a href="https://github.com/Bhatteryash/dramatic-reason-5304" target="_blank">Github</a>
                         <a href="https://dramatic-reason-5304.netlify.app/" target="_blank">Live</a>
@@ -172,7 +170,7 @@
                     <div class="layer">
                         <h2>SkinStore-Clone</h2>
                         <p>Ecommerce website for online shopping with Full functionality flow i.e SignUp, SighIn, Cart, Payment Checkout</p>
-                        <p> Tech Stack- HTML , CSS , JAVASCRIPT,API </p>
+                        <p> Tech Stack | HTML | CSS | JavaScript API </p>
                         <div id="git_live">
                         <a href="https://github.com/Farheen-cell/rhetorical-division-3531" target="_blank">Github</a>
                         <a href="https://startling-crumble-7db358.netlify.app/" target="_blank">Live</a>
